# goeie

./: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
.github/workflows/: ci.yml
src/: certs.rs  config.rs  dns.rs  main.rs  models.rs  server.rs
test/: bruno.json  test.bru
